--- a/passion.html
+++ b/passion.html
@@ -90,7 +90,7 @@
               på sitet med HTML og som video fra Youtube. Derudover lavede jeg
               en LottieFile som skulle være i min herosection. Lottiefile er
               animeret i After Effects og konveteret til formatet LottieFile,
-              som er med til at gøre filformatet mindre..
+              som er med til at gøre filformatet mindre.
             </p>
           </div>
           <img src="img/video.webp" alt="Frames" />
