--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -24,6 +24,7 @@
       href="favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="favicon_io/site.webmanifest" />
+    <script src="js/java.js"></script>
     <title>Virksomhedsite</title>
   </head>
   <body>
@@ -79,7 +80,7 @@
           <div>
             <div class="grid_1-1">
               <div>
-                <h3>Metode</h3>
+                <h2>Metode</h2>
                 <p>
                   I starten af opgaven lavede vi et SCRUM over projektet, så vi
                   vidste hvad vi skulle nå og hvornår.
